--- a/app/templates/issues/new.hbs
+++ b/app/templates/issues/new.hbs
@@ -1,35 +1,49 @@
 <form onsubmit={{prevent-default (perform createIssue value="target")}}>
-  <label for="title">Title</label>
-  <input id="title" name="title" type="text">
+  <div>
+    <label for="title">Title</label>
+    <input id="title" name="title" type="text">
+  </div>
 
-  <label for="body">Body</label>
-  <textarea id="body" name="body"></textarea>
+  <div>
+    <label for="body">Body</label>
+    <textarea id="body" name="body"></textarea>
+  </div>
 
-  <label  for="assignees">Assignees</label>
-  <select id="assignees" name="assignees" multiple>
-    <option>Alice</option>
-    <option>Bob</option>
-  </select>
+  <div>
+    <label for="assignees">Assignees</label>
+    <select id="assignees" name="assignees" multiple>
+      <option>Alice</option>
+      <option>Bob</option>
+    </select>
+  </div>
 
-  <label for="labels">Labels</label>
-  <select id="labels" name="labels" multiple>
-    <option>Feature</option>
-    <option>Bug</option>
-  </select>
+  <div>
+    <label for="labels">Labels</label>
+    <select id="labels" name="labels" multiple>
+      <option>Feature</option>
+      <option>Bug</option>
+    </select>
+  </div>
 
-  <label for="project">Projects</label>
-  <select id="project" name="project">
-    <option value="">No project</option>
-    <option>Some Project</option>
-    <option>Some Other Project</option>
-  </select>
+  <div>
+    <label for="project">Projects</label>
+    <select id="project" name="project">
+      <option value="">No project</option>
+      <option>Some Project</option>
+      <option>Some Other Project</option>
+    </select>
+  </div>
 
-  <label for="milestone">Milestones</label>
-  <select id="milestone" name="milestone">
-    <option value="">No milestone</option>
-    <option>v1</option>
-    <option>v2</option>
-  </select>
+  <div>
+    <label for="milestone">Milestones</label>
+    <select id="milestone" name="milestone">
+      <option value="">No milestone</option>
+      <option>v1</option>
+      <option>v2</option>
+    </select>
+  </div>
 
-  <button type="submit">Submit new issue</button>
+  <div>
+    <button type="submit">Submit new issue</button>
+  </div>
 </form>
