Clean up issues/new more

--- a/app/templates/issues/new.hbs
+++ b/app/templates/issues/new.hbs
@@ -26,7 +26,7 @@
   </div>
 
   <div>
-    <label for="project">Projects</label>
+    <label for="project">Project</label>
     <select id="project" name="project">
       <option value="">No project</option>
       <option>Some Project</option>
@@ -35,7 +35,7 @@
   </div>
 
   <div>
-    <label for="milestone">Milestones</label>
+    <label for="milestone">Milestone</label>
     <select id="milestone" name="milestone">
       <option value="">No milestone</option>
       <option>v1</option>
