Add more info to issues/issue

--- a/app/templates/issues/issue.hbs
+++ b/app/templates/issues/issue.hbs
@@ -1,1 +1,12 @@
 <h1>{{model.title}}</h1>
+<div>{{model.body}}</div>
+<dl>
+  <dt>Assignees</dt>
+  <dd>{{model.assignees}}</dd>
+  <dt>Labels</dt>
+  <dd>{{model.labels}}</dd>
+  <dt>Project</dt>
+  <dd>{{model.project}}</dd>
+  <dt>Milestone</dt>
+  <dd>{{model.milestone}}</dd>
+</dl>
