--- a/app/templates/issues/new.hbs
+++ b/app/templates/issues/new.hbs
@@ -1,4 +1,4 @@
-<form onsubmit={{prevent-default (perform createIssue value="target")}}>
+<form onsubmit={{pipe (prevent-default) (serialize-form) (perform createIssue)}}>
   <div>
     <label for="title">Title</label>
     <input id="title" name="title" type="text">
