Add click test helper

--- a/app/templates/issues/new.hbs
+++ b/app/templates/issues/new.hbs
@@ -5,6 +5,7 @@
   </div>
 
   <div>
+    <label for="body">Body</label>
     <textarea id="body" name="body"></textarea>
   </div>
 
@@ -43,6 +44,6 @@
   </div>
 
   <div>
-    <button type="submit">Submit new issue</button>
+    <button type="submit">Submit</button>
   </div>
 </form>
